webconfigure: add more indicators

--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -45,6 +45,14 @@
         <li><a href="{{ url_for('configuration_macd') }}">MACD</a></li>
         <li><a href="{{ url_for('configuration_dmacd') }}">DMACD</a></li>
         <li><a href="{{ url_for('configuration_rsi') }}">RSI</a></li>
+        <li><a href="{{ url_for('configuration_faststochrsik') }}">FastStochRSIK</a></li>
+        <li><a href="{{ url_for('configuration_faststochrsid') }}">FastStochRSID</a></li>
+        <li><a href="{{ url_for('configuration_fullstochrsid') }}">FullStochRSID</a></li>
+        <li><a href="{{ url_for('configuration_faststochk') }}">FastStochK</a></li>
+        <li><a href="{{ url_for('configuration_faststochd') }}">FastStochD</a></li>
+        <li><a href="{{ url_for('configuration_fullstochd') }}">FullStochD</a></li>
+        <li><a href="{{ url_for('configuration_kdj') }}">KDJ</a></li>
+        <li><a href="{{ url_for('configuration_ichimoku') }}">Ichimoku</a></li>
       </ul>
     </li>
     </ul>
