webconfigure: add rest of indicators

--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -53,6 +53,13 @@
         <li><a href="{{ url_for('configuration_fullstochd') }}">FullStochD</a></li>
         <li><a href="{{ url_for('configuration_kdj') }}">KDJ</a></li>
         <li><a href="{{ url_for('configuration_ichimoku') }}">Ichimoku</a></li>
+        <li><a href="{{ url_for('configuration_stddev') }}">StdDev</a></li>
+        <li><a href="{{ url_for('configuration_bollbands') }}">BollBands</a></li>
+        <li><a href="{{ url_for('configuration_bollingerbandwidth') }}">BollBandwidth</a></li>
+        <li><a href="{{ url_for('configuration_atr') }}">ATR</a></li>
+        <li><a href="{{ url_for('configuration_chandexit') }}">ChandExit</a></li>
+        <li><a href="{{ url_for('configuration_dmi') }}">DMI</a></li>
+        <li><a href="{{ url_for('configuration_sroc') }}">SROC</a></li>
       </ul>
     </li>
     </ul>
