Only graph Trade Indicators and Price for now

--- a/templates/configuration_grapher.html
+++ b/templates/configuration_grapher.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div class="container">
   <h2>Grapher</h2>
+  <h4>Creates a graph for Price and each Trade Indicator</h4>
   {{ wtf.quick_form(form, button_map={'grapher_submit': 'primary'}) }}
 
 </div>
