webconfigure: Add missing Aroon

--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -51,6 +51,7 @@
         <li><a href="{{ url_for('configuration_faststochk') }}">FastStochK</a></li>
         <li><a href="{{ url_for('configuration_faststochd') }}">FastStochD</a></li>
         <li><a href="{{ url_for('configuration_fullstochd') }}">FullStochD</a></li>
+        <li><a href="{{ url_for('configuration_aroon') }}">Aroon</a></li>
         <li><a href="{{ url_for('configuration_kdj') }}">KDJ</a></li>
         <li><a href="{{ url_for('configuration_ichimoku') }}">Ichimoku</a></li>
         <li><a href="{{ url_for('configuration_stddev') }}">StdDev</a></li>
